Update FAQ links to correct spelling of "ASULADO" in faq_1.html, faq_2.html, and faq_3.html

--- a/src/partials/PORTAL/faqs/faq_1_2.html
+++ b/src/partials/PORTAL/faqs/faq_1_2.html
@@ -49,9 +49,21 @@
         <div class="fqs_info">
           <p>
             Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso, ingresando <a href="#">aquí.</a> Adicional,
-            recuerda diligenciar la solicitud de sustitución pensional descarga
-            <a href="#">aquí.</a>.
+            según sea tu caso, ingresando
+            <a
+              href="/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf 
+            "
+              target="_blank"
+              >aquí.</a
+            >
+            Adicional, recuerda diligenciar la solicitud de sustitución
+            pensional descarga
+            <a
+              href="/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf 
+          "
+              target="_blank"
+              >aquí</a
+            >.
           </p>
         </div>
       </div>
@@ -132,9 +144,21 @@
         <div class="fqs_info">
           <p>
             Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso, ingresando <a href="#">aquí.</a>. Adicional,
-            recuerda diligenciar la solicitud de sustitución pensional descarga
-            <a href="#">aquí</a> .
+            según sea tu caso, ingresando
+            <a
+              href="/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf 
+            "
+              target="_blank"
+              >aquí.</a
+            >. Adicional, recuerda diligenciar la solicitud de sustitución
+            pensional descarga
+            <a
+              href="/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf 
+            "
+              target="_blank"
+              >aquí</a
+            >
+            .
           </p>
           <ul>
             <li>Certificado de estudio</li>
