--- a/src/partials/PORTAL/faqs/faq_1_4.html
+++ b/src/partials/PORTAL/faqs/faq_1_4.html
@@ -81,7 +81,7 @@
         </div>
       </div>
     </li>
-    <li class="fqs_list">
+    <!-- <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>¿Puedo afiliarme a una caja de compensación estando pensionado?</h4>
         <div class="fqs_info">
@@ -108,6 +108,6 @@
           </p>
         </div>
       </div>
-    </li>
+    </li> -->
   </ol>
 </li>
