--- a/src/partials/PORTAL/faqs/faq_2_1.html
+++ b/src/partials/PORTAL/faqs/faq_2_1.html
@@ -33,7 +33,7 @@
           <p>
             Si olvidaste tu contraseña, no te preocupes. En la página de inicio
             del Portal Transaccional encontrarás un enlace para recuperarla.
-            Solo tienes que ingresar tu número de documento, el correo.
+            Solo tienes que ingresar tu número de documento.
           </p>
         </div>
       </div>
