--- a/src/partials/PORTAL/faqs/faq_2_2.html
+++ b/src/partials/PORTAL/faqs/faq_2_2.html
@@ -28,7 +28,7 @@
             </li>
             <li>
               Enviar documentos como: certificado de estudio, certificado de
-              supervivencia, poderes especiales, entre otros.
+              supervivencia, entre otros.
             </li>
             <li>
               Crear y/o consultar tus solicitudes (PQRS) con el número del
@@ -64,11 +64,9 @@
             <li>Certificado de Ingresos y Retenciones</li>
           </ul>
           <p>
-            Dirígete a la sección “Gestión de documentos” (BOTÓN) en la parte
-            superior de la página. Para ir directamente a la sección de
-            Certificados en el Portal Transaccional, haz clic
-            <a href="#">aquí.</a> (Botón que dirige a “certificados” en el
-            Portal Transaccional).
+            Dirígete a la sección “Certificados” en la parte superior de la
+            página, selecciona el certificado que desees gestionar y sigue las
+            indicaciones mencionadas.
           </p>
         </div>
       </div>
