--- a/src/partials/PORTAL/faqs/faq_2_3.html
+++ b/src/partials/PORTAL/faqs/faq_2_3.html
@@ -9,13 +9,28 @@
             Nuestro mayor interés es que puedas tener trazabilidad y autogestión
             de tus solicitudes. Para revisar tu historial de PQRS, selecciona en
             el menú principal la opción “Solicitudes” y luego “Consultar una
-            solicitud”. Allí podrás encontrar el historial de las últimas 10
-            solicitudes creadas.
+            solicitud”. Allí encontrarás todas tus solicitudes creadas.
           </p>
         </div>
       </div>
     </li>
     <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cómo radicar solicitudes dentro del Portal Transaccional?</h4>
+        <div class="fqs_info">
+          <p>
+            ¡Queremos que puedas gestionar tus peticiones, quejas, reclamos o
+            servicios de forma completamente autónoma en el Portal! Por eso,
+            crearlos es muy fácil: en la pantalla de inicio del Portal,
+            selecciona en el menú principal la opción “Solicitudes” y luego
+            “Crear una solicitud”. Identifica el tipo de solicitud que deseas
+            crear, luego llena todos los campos con la información necesaria y
+            haz clic en “Enviar solicitud” al final de la página.
+          </p>
+        </div>
+      </div>
+    </li>
+    <!-- <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>¿Cómo puedo saber quiénes son mis posibles beneficiarios?</h4>
         <div class="fqs_info">
@@ -41,6 +56,6 @@
           </p>
         </div>
       </div>
-    </li>
+    </li> -->
   </ol>
 </li>
