--- a/src/partials/PORTAL/faqs/faq_2_5.html
+++ b/src/partials/PORTAL/faqs/faq_2_5.html
@@ -19,10 +19,9 @@
             <li>Seguimiento de novedades</li>
           </ul>
           <p>
-            Dirígete a la sección “Gestión de documentos” (BOTÓN) en la parte
-            superior de la página, y selecciona la opción “Novedades”. Para ir
-            directamente a la sección de Novedades en el Portal Transaccional,
-            haz clic <a href="#">aquí.</a>
+            Dirígete a la sección “Novedades” en la parte superior de la página,
+            selecciona la opción que desees gestionar y sigue las indicaciones
+            mencionadas. Para visitar la sección, <a href="#">haz clic aquí.</a>
           </p>
         </div>
       </div>
@@ -36,9 +35,10 @@
         <div class="fqs_info">
           <p>
             Te recomendamos tener a la mano el teléfono móvil, el documento de
-            identidad y garantizar el acceso a internet y correo electrónico. Si
-            deseas registrar una novedad, no olvides enviarnos una copia del
-            documento.
+            identidad y garantizar tu acceso a internet y al correo electrónico
+            registrado en nuestro sistema. Si deseas registrar una novedad, no
+            olvides enviarnos una copia del documento que se solicite durante el
+            proceso.
           </p>
         </div>
       </div>
