--- a/src/partials/PORTAL/faqs/faq_2_6.html
+++ b/src/partials/PORTAL/faqs/faq_2_6.html
@@ -15,16 +15,20 @@
           <ul>
             <li>
               Escríbele a Lusa, nuestra asistente quien está disponible las 24
-              horas para ti. Encuéntrala en www.asulado.com o a través de
-              nuestra línea de Whatsapp +57 3155114150.
+              horas para ti. Encuéntrala en
+              <a href="https://www.asulado.com/" target="_blank"
+                >www.asulado.com</a
+              >
+              o a través de nuestra línea de Whatsapp
+              <a
+                href="https://api.whatsapp.com/send?phone=573155114150"
+                target="_blank"
+                >+57 3155114150.</a
+              >
             </li>
             <li>
               Llámanos a través de nuestra línea telefónica nacional 01 8000 412
               854 o en Medellín (604) 402 68 76
-            </li>
-            <li>
-              En la parte inferior de este Portal Transaccional encuentras
-              nuestros canales de atención disponibles.
             </li>
           </ul>
         </div>
