--- a/src/partials/PORTAL/faqs/faq_3_2.html
+++ b/src/partials/PORTAL/faqs/faq_3_2.html
@@ -42,7 +42,7 @@
                 <b class="bt v_azul">“Novedades de pensión voluntaria”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Deducción nómina”</b> en la parte
                 superior.
@@ -51,7 +51,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Novedades Pensión Voluntaria”</b>, haz
                 clic en <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -101,7 +101,7 @@
                 <b class="bt v_azul">“Novedades de Caja de Compensación”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Deducción nómina”</b> en la parte
                 superior.
@@ -110,7 +110,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Novedades de Caja de Compensación”</b
                 >, haz clic en <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -158,7 +158,7 @@
                 En la opción <b class="bt v_azul">“Novedades de EPS”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Deducción nómina”</b> en la parte
                 superior.
@@ -167,7 +167,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Novedades de EPS”</b>, haz clic en
                 <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -216,7 +216,7 @@
                 <b class="bt v_azul">“Redistribuciones de mesada”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Deducción nómina”</b> en la parte
                 superior.
@@ -225,7 +225,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Redistribuciones de mesada”</b>, haz
                 clic en <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -275,7 +275,7 @@
                 En la opción <b class="bt v_azul">“Certificado de estudio”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Certificación nómina”</b> en la parte
                 superior.
@@ -284,7 +284,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Certificado de estudio”</b>, haz clic
                 en <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -333,7 +333,7 @@
                 <b class="bt v_azul">“Certificado de supervivencia”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Certificación nómina”</b> en la parte
                 superior.
@@ -342,7 +342,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Certificado de supervivencia”</b>, haz
                 clic en <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -391,7 +391,7 @@
                 <b class="bt v_azul">“Novedades de cuenta financiera”</b>,
                 selecciona <b class="bt v_trans">“Ver más”</b>.
               </li>
-              <li>
+              <!-- <li>
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Certificación nómina”</b> en la parte
                 superior.
@@ -400,7 +400,7 @@
                 En el recuadro de
                 <b class="bt v_amarillo">“Novedades de cuenta financiera”</b>,
                 haz clic en <b class="bt v_trans">“Ir”</b>.
-              </li>
+              </li> -->
               <li>Sigue las instrucciones y guarda tus novedades.</li>
             </ul>
           </div>
@@ -417,7 +417,7 @@
               <h5>¿Cómo se gestiona?</h5>
             </div>
             <p>
-              Para registrar el estado de tus novedades en el Portal
+              Para consultar el estado de tus novedades en el Portal
               Transaccional, solo debes seguir los siguientes pasos:
             </p>
             <ul>
@@ -441,11 +441,6 @@
                 Una vez estés en la página de Novedades, selecciona la pestaña
                 <b class="bt v_trans">“Consultar novedades”</b> en la parte
                 superior.
-              </li>
-              <li>
-                Podrás ver el estado de cada una de las novedades que has
-                registrado, que aparecen según el orden en que fueron
-                solicitadas.
               </li>
             </ul>
           </div>
