--- a/src/partials/PORTAL/faqs/faq_1_5.html
+++ b/src/partials/PORTAL/faqs/faq_1_5.html
@@ -1,7 +1,7 @@
 <li data-tab="{{data}}" class="as__g_faqs_tcon_list_int as__g_faqs_ls {{cls}}">
   <h3>Sobre temas financieros</h3>
   <ol class="fqs">
-    <li class="fqs_list">
+    <!-- <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
           Si cambio de medio de pago o cuenta bancaria ¿cómo lo notifico a
@@ -17,7 +17,7 @@
           </p>
         </div>
       </div>
-    </li>
+    </li> -->
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>¿Puedo solicitar un crédito con ASULADO Seguros de Vida?</h4>
