--- a/src/partials/PORTAL/faqs/faq_2_4.html
+++ b/src/partials/PORTAL/faqs/faq_2_4.html
@@ -3,27 +3,34 @@
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Cómo puedo saber quiénes son mis posibles beneficiarios?</h4>
+        <h4>¿Cómo sé quiénes son mis beneficiarios?</h4>
         <div class="fqs_info">
           <p>
             Para conocer esta información, selecciona la opción de
             “Certificados” que se encuentra en el menú principal y haz clic en
-            “Copia de Póliza, al generar el documento podrás visualizar tus
-            posibles beneficiarios.
+            “Copia de Póliza”, al generar el documento podrás visualizar tus
+            beneficiarios.
           </p>
         </div>
       </div>
     </li>
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Cómo puedo agregar o eliminar un beneficiario?</h4>
+        <h4>¿Cómo puedo solicitar agregar o eliminar un beneficiario?</h4>
         <div class="fqs_info">
           <p>
             En la parte superior de la pantalla, en el menú principal,
             selecciona “Solicitudes” y luego haz clic en “Crear una solicitud” y
-            diligencia los campos solicitados. Puedes adjuntar documentos en
-            caso de ser necesario y no olvides autorizar el tratamiento de datos
-            personales.
+            diligencia los campos solicitados de la siguiente manera:
+          </p>
+          <ul>
+            <li><b>Tipo:</b> petición</li>
+            <li><b>Tema:</b> novedades de nómina</li>
+            <li><b>Detalle: </b> inclusión/exclusión de beneficiario</li>
+          </ul>
+          <p>
+            Termina de diligenciar los campos y adjunta los documentos en caso
+            de ser necesario.
           </p>
         </div>
       </div>
