--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -6,6 +6,8 @@
     <div class="as__section_wrapper md:!px-0">
       <div class="as__section_content_full">
         <!--  -->
+        <include src="gobierno/info_7.html"></include>
+        <div class="divider"></div>
 
         <include src="gobierno/info_6.html"></include>
 
