--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -5,7 +5,9 @@
   <section class="as__section">
     <div class="as__section_wrapper md:!px-0">
       <div class="as__section_content_full">
-        <!--  -->
+
+        <include src="gobierno/info_8.html"></include>
+       
         <include src="gobierno/info_7.html"></include>
         <div class="divider"></div>
 
