--- a/src/partials/gobierno/info_8.html
+++ b/src/partials/gobierno/info_8.html
@@ -14,7 +14,7 @@
           <br class="md:block hidden" />
           los
           <span
-            class="inline-block rounded-full !text-azul-20 bg-amarillo-light px-3 py-1"
+            class="inline-block rounded-full !text-azul-norm bg-amarillo-light px-3 py-1"
             >accionistas</span
           >
         </p>
