--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -2,7 +2,53 @@
   <div class="as__banner_wrapper">
     <div class="as__banner_wrapper_int">
 
+
       <div class="banner banner_1 active">
+        <div class="as__banner_content full">
+          <img
+            src="/assets/images/txt_nuevo.svg"
+            width="150px"
+            alt="Asulado"
+          />
+          <h1 class="!leading-none">
+            <span class="!inline-block w-auto rounded-full !text-azul-norm bg-azul-bright2 py-1 leading-none px-4 text-2xl md:text-6xl" style="font-weight: 700;">PORTAL</span><br />
+            <span class="!inline-block w-auto rounded-full !text-azul-norm bg-azul-bright2 py-1 leading-none px-4 text-2xl md:text-6xl" style="font-weight: 700;">TRANSACCIONAL</span><br />
+          </h1>
+          <div>
+            <p class="ban_anim1 text-2xl md:text-2xl">
+              Gestionar tus <b>solicitudes y novedades</b> con <b>ASULADO</b> <br />nunca había sido tan fácil y rápido.
+            </p>
+            <p class="dest ban_anim1" style="font-style: italic;">
+              <b>¡Explóralo y disfruta sus beneficios!</b>
+            </p>
+
+             <button onclick="startChat()" class="as__button self-start">
+              <span>Conócelo aquí</span>
+              <i
+                role="presentation"
+                class="fa-light fa-arrow-right"
+                aria-hidden="true"
+              ></i>
+            </button> 
+          </div>
+
+    
+        </div>
+        <div class="as__banner_images">
+          <img
+            src="/assets/images/bg_portal_new.webp"
+            class="max-w-[800px]"
+            alt="Asulado"
+          />
+        </div>
+
+        <div class="as__banner_piso"></div>
+
+      </div>
+
+
+
+      <div class="banner banner_1">
         <div class="as__banner_content full">
           <h1 class="!leading-none">
             <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-6xl" style="font-weight: 700;">¡Ahora contacta </span> <br />
