--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -3,14 +3,14 @@
     <div class="as__banner_wrapper_int">
 
 
-      <div class="banner banner_1 active">
+      <div class="banner banner_1 b_revese  active">
         <div class="as__banner_content full">
           <img
             src="/assets/images/txt_nuevo.svg"
             width="150px"
             alt="Asulado"
           />
-          <h1 class="!leading-none">
+          <h1 class="!leading-none -mt-10">
             <span class="!inline-block w-auto rounded-full !text-azul-norm bg-azul-bright2 py-1 leading-none px-4 text-2xl md:text-6xl" style="font-weight: 700;">PORTAL</span><br />
             <span class="!inline-block w-auto rounded-full !text-azul-norm bg-azul-bright2 py-1 leading-none px-4 text-2xl md:text-6xl" style="font-weight: 700;">TRANSACCIONAL</span><br />
           </h1>
@@ -37,7 +37,7 @@
         <div class="as__banner_images">
           <img
             src="/assets/images/bg_portal_new.webp"
-            class="max-w-[800px]"
+            class="max-w-[900px]"
             alt="Asulado"
           />
         </div>
