--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -22,14 +22,14 @@
               <b>¡Explóralo y disfruta sus beneficios!</b>
             </p>
 
-             <button onclick="startChat()" class="as__button self-start">
+             <a href="https://www.personas.asulado.com/" target="_blank" class="as__button self-start">
               <span>Conócelo aquí</span>
               <i
                 role="presentation"
                 class="fa-light fa-arrow-right"
                 aria-hidden="true"
               ></i>
-            </button> 
+             </a> 
           </div>
 
     
