--- a/src/partials/PORTAL/faqs/faq_3_1.html
+++ b/src/partials/PORTAL/faqs/faq_3_1.html
@@ -101,6 +101,17 @@
               </li>
             </ul>
           </div>
+          <video
+          class="fqs_video"
+            controls
+            poster="/assets/videos/obten_certificado_pension.jpg"
+          >
+            <source
+              src="/assets/videos/obten_certificado_pension.mp4"
+              type="video/mp4"
+            />
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
     </li>
