--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -309,6 +309,11 @@
             Asulado te guía
           </a>
         </li>
+        <li>
+          <a href="/portal" class="dest" aria-current="page">
+            Gestiona tus solicitudes y registra tus novedades en nuestro Portal Transaccional 
+          </a>
+        </li>
       </ul>
     </div>
     <div class="as__footer_brands">
