--- a/src/partials/home/cifras.html
+++ b/src/partials/home/cifras.html
@@ -24,7 +24,7 @@
             <span id="home_cifras_colaboradores" class="l"></span
             ><small>biilones</small>
           </h4>
-          <p>AUM (Asset Under Management - Activos Bajo Administración)</p>
+          <p> confiados en nosotros</p>
         </div>
       </div>
     </div>
