--- a/src/partials/empresa/video.html
+++ b/src/partials/empresa/video.html
@@ -4,7 +4,7 @@
     <div class="as__section_content">
       <h3 class="as__title_section">¿Qué nos inspira?</h3>
       <iframe style="margin-top: 4em;"
-        src="https://www.youtube.com/embed/MmGoLBfmNHQ?si=8H3BuyQcVEO5K10v"
+        src="https://www.youtube.com/embed/aefsA6SG0VM"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
