--- a/src/partials/guia/tab_2.html
+++ b/src/partials/guia/tab_2.html
@@ -11,7 +11,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_1.jpg"
+                        src="/assets/images/portal_1.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
