--- a/src/partials/guia/tab_2.html
+++ b/src/partials/guia/tab_2.html
@@ -26,7 +26,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_2.jpg"
+                        src="/assets/images/portal_2.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -41,7 +41,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_3.jpg"
+                        src="/assets/images/portal_3.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -56,7 +56,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_4.jpg"
+                        src="/assets/images/portal_4.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -71,7 +71,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_5.jpg"
+                        src="/assets/images/portal_5.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -86,7 +86,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_6.jpg"
+                        src="/assets/images/portal_6.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
