--- a/src/partials/guia/tab_2.html
+++ b/src/partials/guia/tab_2.html
@@ -103,7 +103,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_7.jpg"
+                        src="/assets/images/portal_7.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -120,7 +120,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_8.jpg"
+                        src="/assets/images/portal_8.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -137,7 +137,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_9.jpg"
+                        src="/assets/images/portal_9.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -154,7 +154,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_10.jpg"
+                        src="/assets/images/portal_10.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -171,7 +171,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_11.jpg"
+                        src="/assets/images/portal_11.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
@@ -188,7 +188,7 @@
                       target="_blank"
                     >
                       <img
-                        src="/assets/images/video_portal_12.jpg"
+                        src="/assets/images/portal_12.jpg"
                         alt="Asulado te guia"
                         class="w-full rounded-3xl block"
                       />
