--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -168,14 +168,16 @@
                 </div>
               </div>
               
-
-              <!-- <div class="as_footer_ct_item">
-                <i role="presentation" class="fa-regular fa-clock"></i>
+              <div class="as_footer_ct_item">
+                <i role="presentation" class="fa-regular fa-window"></i>
                 <div>
-                  <p class="ttle">Horario de atención</p>
-                  <p>Lun-Vie: 07:30 am - 05:00 pm</p>
+                  <p class="ttle"><a href="/portal" class="dest" aria-current="page">
+                    Gestiona tus <b> solicitudes y registra<br /> tus novedades</b>  en nuestro <b> Portal Transaccional </b> 
+                  </a></p>
+                  
                 </div>
-              </div> -->
+              </div>
+
             </div>
           </div>
         </div>
@@ -309,11 +311,7 @@
             Asulado te guía
           </a>
         </li>
-        <li>
-          <a href="/portal" class="dest" aria-current="page">
-            Gestiona tus solicitudes y registra tus novedades en nuestro Portal Transaccional 
-          </a>
-        </li>
+        
       </ul>
     </div>
     <div class="as__footer_brands">
