--- a/src/partials/home/cifras.html
+++ b/src/partials/home/cifras.html
@@ -8,7 +8,7 @@
           <h4>
             <span id="home_cifras_clientes" class="m"></span><small>mil</small>
           </h4>
-          <p>clientes de Rentas Vitalicias</p>
+          <p style="text-align: center;">clientes de Rentas Vitalicias</p>
         </div>
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS2.webp" alt="asulado" />
@@ -16,15 +16,15 @@
             <span id="home_cifras_cobertura" class="l"></span
             ><small>millones</small>
           </h4>
-          <p>de cobertura de afiliados a través del Seguro Previsional</p>
+          <p style="text-align: center;">de cobertura de afiliados a través del Seguro Previsional</p>
         </div>
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS3.webp" alt="asulado" />
           <h4>
             <span id="home_cifras_colaboradores" class="l"></span
-            ><small>biilones</small>
+            ><small>billones</small>
           </h4>
-          <p> confiados en nosotros</p>
+          <p style="text-align: center;">confiados en nosotros</p>
         </div>
       </div>
     </div>
