--- a/src/partials/guia/tab_1.html
+++ b/src/partials/guia/tab_1.html
@@ -1,5 +1,21 @@
 <div id="sobre-seguridad" class="ctab ctab0 active">
     <section id="as__ciber_t1" class="as__section as__ciber_t1 {{bg}}">
+
+
+      <div class="as__section_wrapper" style="margin-bottom: 40px;">
+        <div class="as__section_content">
+           <div class="as__que_es_content">
+             <p class="prop_anim  text-xl">
+               <b>LUSA</b> estará disponible para ti las 24 horas del día, y podrá ayudarte con la solicitud de documentos como tu colilla de pago, tu certificado de pensión, la copia de tu póliza o tu Certificado de Ingresos y Retenciones. ¡Descubre aquí más información sobre cómo comunicarte con ella!
+             </p>
+             <p class="text-azul-norm text-xl">
+               <b> ¡Descubre aquí más información sobre cómo comunicarte con ella!</b>
+             </p>
+           </div>
+         </div>
+        </div>
+
+        
         <section class="as__section bg-alpha-20 pb-20">
             <div class="as__section_wrapper">
               <!--<h3 class="as__title_section pt-10 pb-10">Videos destacados</h3>--->
