--- a/src/partials/guia/tab_2.html
+++ b/src/partials/guia/tab_2.html
@@ -1,5 +1,23 @@
 <div id="recomendaciones" class="ctab ctab1">
-    <section id="as__ciber_t1" class="as__section as__ciber_t2 {{bg}}" style="padding-top: 2rem !important;">
+    <section id="as__ciber_t1" class="as__section as__ciber_t1 {{bg}}" style="padding-top: 2rem !important; background-color: #e9f5f8;">
+
+
+
+      <div class="as__section_wrapper {{bg}}" style="margin-bottom: 40px; ">
+        <div class="as__section_content">
+           <div class="as__que_es_content">
+             <p class="prop_anim  text-xl">
+              En nuestro <b>Portal Transaccional</b>, podrás ingresar en cualquier momento del día para gestionar y modificar tus datos personales, registrar novedades, solicitar certificados, consultar tu calendario de pagos y mucho más. 
+             </p>
+             <p class="text-azul-norm text-xl">
+               <b> ¡Aquí te contamos más sobre todo lo que puedes hacer!</b>
+             </p>
+           </div>
+         </div>
+        </div>
+
+
+
         <section class="as__section bg-alpha-20 pb-20">
             <div class="as__section_wrapper">
               <!--<h3 class="as__title_section pt-10 pb-10">Videos destacados</h3>--->
