--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -83,7 +83,7 @@
         <!-- Primera columna -->
         <div class="p-6 rounded-lg">
           <a
-          href="https://melborp.dev/asulado/vitalicia-min.pdf"
+          href="/assets/documentos/vitalicia-min.pdf"
           target="_blank"
           class="as__button prop_anim !ml-0 !mr-auto w-auto" style="font-size: 1.3em; font-weight: 700;"
         >
@@ -95,7 +95,7 @@
         <!-- Segunda columna -->
         <div class="p-6 rounded-lg">
           <a
-          href="https://melborp.dev/asulado/previsional-min.pdfl"
+          href="/assets/documentos/previsional-min.pdf"
           target="_blank"
           class="as__button prop_anim !ml-0 !mr-auto"  style="font-size: 1.3em; font-weight: 700;"
         >
