--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -78,7 +78,7 @@
 <section id="" class="as__section as__que_es {{bg}}">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <h3 class="as__title_section">Conoce más sobre nuestros productos:::</h3>
+      <h3 class="as__title_section">Conoce más sobre nuestros productos:</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
         <!-- Primera columna -->
         <div class="p-6 rounded-lg">
