--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -154,40 +154,42 @@ parte inferior derecha la página web.
     </div>
   </section>
 
-<!-- <section
-    class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_3.svg)] bg-center bg-contain bg-no-repeat"
-  >
+  <section class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_3.svg)] bg-center bg-contain bg-no-repeat">
     <div class="as__section_wrapper">
       <div class="as__section_content">
-        <div
-          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
-        >
-          <div class="w-full md:w-1/2 flex flex-col gap-4">
-            <h4
-              class="z-20 text-2xl md:text-5xl text-white font-je font-semibold"
-            >
+        <div class="py-24 w-full mx-auto flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center">
+
+          <div class="w-full md:w-1/3 flex flex-col gap-4">
+            <h4 class="z-20 text-2xl md:text-5xl text-white font-je font-semibold">
               Portal
               <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
-                >Transaccional</span
-              >
+                >Transaccional</span>
             </h4>
             <div class="text-base text-white md:pr-12">
               <ul class="start-li">
                 <li>
-                  Asegúrate de que tu contraseña sea segura:
-                  <b
-                    >que tenga mínimo 8 caracteres y combine letras mayúsculas y
-                    minúsculas, números y caracteres especiales.</b
-                  >
-                </li>
-                <li>
-                  Ingresa al Portal Transaccional solo desde el sitio web o
-                  links oficiales de ASULADO.
+                  Accede a nuestro Portal Transaccional únicamente a través del sitio web oficial de ASULADO <b>(www.asulado.com).</b> Verifica que la dirección del portal sea:<b><a href="https://www.personas.asulado.com/" target="_blank">https://www.personas.asulado.com/</a></b>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="w-full md:w-1/2">
+
+          <div class="w-full md:w-1/3 flex flex-col gap-4">
+           
+            <div class="text-base text-white md:pr-12">
+              <ul class="start-li">
+                <li>
+                  Intenta ingresar siempre desde tu computador personal, evita el uso de computadores públicos o desconocidos.
+                </li>
+                <li>
+                  Si estás en la zona transaccional y deseas salir de manera segura, haz clic en ‘Cerrar sesión’.
+                </li>
+                <li>Te recomendamos crear tu contraseña con las indicaciones de seguridad, recuerda no reutilizar una contraseña que ya usas para otros sitios web y cambiarla periódicamente.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="w-full md:w-1/3">
             <img
               class="max-w-[300px] mx-auto"
               src="/assets/images/img_tab4_ciber.webp"
@@ -197,7 +199,7 @@ parte inferior derecha la página web.
         </div>
       </div>
     </div>
-  </section>-->
+  </section>
 
   <section class="bg-[#08c0fd] as__section bg-[url(/assets/images/ciber/2_4.svg)] bg-center bg-contain bg-no-repeat">
     <div class="as__section_wrapper">
