--- a/src/partials/guia/tab_1.html
+++ b/src/partials/guia/tab_1.html
@@ -6,9 +6,9 @@
         <div class="as__section_content">
            <div class="as__que_es_content">
              <p class="prop_anim  text-xl">
-               <b>LUSA</b> estará disponible para ti las 24 horas del día, y podrá ayudarte con la solicitud de documentos como tu colilla de pago, tu certificado de pensión, la copia de tu póliza o tu Certificado de Ingresos y Retenciones. ¡Descubre aquí más información sobre cómo comunicarte con ella!
+               <span class="text-azul-norm"><b>LUSA</b></span>, nuestra asistente virtual, está disponible para ti las 24 horas del día y los 7 días de la semana! Te ayudará a autogestionar tus solicitudes relacionadas con: <span class="text-azul-norm"><b>Colilla de Pago, Certificado de Pensión, Copia de tu Póliza y Certificado de Ingresos y Retenciones. </b></span>
              </p>
-             <p class="text-azul-norm text-xl">
+             <p class="text-azul-norm text-xl mt-10">
                <b> ¡Descubre aquí más información sobre cómo comunicarte con ella!</b>
              </p>
            </div>
