--- a/src/partials/guia/tab_2.html
+++ b/src/partials/guia/tab_2.html
@@ -65,7 +65,7 @@
                       />
                     </a>
                     <p class="text-base text-azul-bold text-center text-xl">
-                        ¿Necesitas cambiar tu contraseña del <b>Portal Transaccional</b>?
+                      ¿Necesitas cambiar o olvidaste tu contraseña del <b>Portal Transaccional</b>?
                     </p>
                   </div>
                   <div class="flex flex-col gap-4">
